--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,96 @@ services:
     environment:
       - PORT=${PORT}
       - TCP_PORT=${TCP_PORT}
-      - DATABASE_URL=postgresql://postgres:postgres@${DATABASE_URL}/msservergpstcp?schema=public
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/msservergpstcp?schema=public
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
     networks:
       - postgres_network
+    depends_on:
+      - redis
+      - postgres
     restart: unless-stopped
+
+  postgres:
+    image: postgres:latest
+    environment:
+      POSTGRES_DB: msservergpstcp
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    networks:
+      - postgres_network
+
+  pgbouncer:
+    image: edoburu/pgbouncer:latest
+    container_name: msservergpstcp-pgbouncer
+    environment:
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: postgres
+      DB_NAME: msservergpstcp
+      POOL_MODE: transaction
+      MAX_CLIENT_CONN: 1000
+      DEFAULT_POOL_SIZE: 20
+      LISTEN_PORT: 6432
+    ports:
+      - "6432:6432"
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    networks:
+      - postgres_network
+
+  redis:
+    image: redis:latest
+    container_name: msservergpstcpredis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+    networks:
+      - postgres_network
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: msservergpstcp-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "80:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    restart: unless-stopped
+    depends_on:
+      - postgres
+    networks:
+      - postgres_network
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: msservergpstcp-redis-commander
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+      - redis
+    restart: unless-stopped
+    networks:
+      - postgres_network
+
+volumes:
+  postgres_data:
+  pgadmin_data:
+  redis_data:
 
 networks:
   postgres_network:
+    driver: bridge 
