fix refactor insert in postgresql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,19 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DB=${REDIS_DB}
+      - REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX}
     networks:
       - tcp_network
     restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
 
 networks:
   tcp_network:
