--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,5 @@ services:
           memory: 512M
 
 networks:
-  tcp_network:
-    driver: bridge 
+  postgres_postgres_network:
+    external: true 
