fix docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - REDIS_DB=${REDIS_DB}
       - REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX}
     networks:
-      - tcp_network
+      - postgresql_postgres_network
     restart: unless-stopped
     deploy:
       resources:
@@ -28,5 +28,5 @@ services:
           memory: 512M
 
 networks:
-  postgres_postgres_network:
-    external: true 
+  postgresql_postgres_network:
+    external: true
