--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "semi": false,
+  "trailingComma": "all",
   "singleQuote": true,
-  "trailingComma": "all"
+  "endOfLine": "auto",
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false
 }
