--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - REDIS_KEY_PREFIX=${REDIS_KEY_PREFIX}
     networks:
       - postgresql_postgres_network
-    restart: unless-stopped
+    restart: always
     deploy:
       resources:
         limits:
