--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "dependencies": {
     "@nestjs/bull": "^11.0.2",
-    "@nestjs/common": "^11.0.1",
+    "@nestjs/common": "^11.0.13",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.1",
+    "@nestjs/core": "^11.0.13",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.13",
     "@nestjs/swagger": "^11.1.5",
     "@types/ioredis": "^5.0.0",
     "bull": "^4.16.5",
@@ -47,6 +47,7 @@
     "@prisma/client": "^6.6.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bull": "^4.10.4",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
