--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.1",
     "dms-conversion": "^3.1.3",
     "ioredis": "^5.3.2",
+    "luxon": "^3.6.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
